Major update:  Routes EJS, and MVC - Managing Profile using Sessions & Database integration(MongoDb) There weren’t any errors in my HTML5 prototype. So proceeded with creating of JavaScript Objects to implement the business layer of the application. And used EJS template pages to present the view to the browser. Implemented fetching data from database for Categories, Item, User Profile, Feedback and login page Implemented Sign in and Sign out features by using node.js session. Added modal window for sign in A database using mongoDB was created File path to access the assets were kept relative and not specific to my machine Implemented a shell invocation for the project, now we can launch the website by typing npm start in the terminal. Implemented Sign in and Sign out features by using node.js session. Added models such as User, UserItem, UserProfile and appropriate functions to extract values in each models as well. Improved overall animationUserDB was created as a dummy database for User details, User Items and User Profiles File path to access the assets were kept relative and not specific to my machineDynamic user profile functionality was implemented and session were used to store data. I haven’t split the ProfileController into multiple ones. I have maintained one controller for Catalog and one for managing profiles. The application flow as per the pseudo code was implemented, with additional validations and checks as deemed necessary. When a user is signed in, Sign out button will be enabled, else it will remain hidden.

--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "http-errors": "^1.7.2",
+    "mongoose": "^5.4.21",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
